--- a/source/less/template_styles.less
+++ b/source/less/template_styles.less
@@ -18,6 +18,8 @@
 @import "blocks/types.less";
 @import "blocks/service-premium.less";
 @import "blocks/excursion.less";
+@import "blocks/gallery-slider.less";
+@import "blocks/discount-form.less";
 /*@import "blocks/main-img.less";
 @import "blocks/intro.less";
 @import "blocks/info.less";
