--- a/templates/index.html
+++ b/templates/index.html
@@ -20,6 +20,7 @@
     <header class="header">
         <div class="wrap">
             <div class="header__logo"><a href="/"><img alt="logo" src="../images/logo.png"></a></div>
+            <div class="header__logo--mini"><a href="/"><img alt="logo" src="../images/logo-mini.png"></a></div>
             <div class="header__slogan">
                 <b>Комплексный ремонт</b><br> квартир, коттеджей и офисов
             </div>
@@ -27,7 +28,8 @@
                 Новосибирск, ул. Военная, д. 4
             </div>
             <div class="header__phones">
-                +7 (383) 207-54-53<br>+7 (923) 222-33-31<br>
+                <div class="header__phones-item">+7 (383) 207-54-53</div>
+                <div class="header__phones-item">+7 (923) 222-33-31</div>
             </div>
             <div class="header__callme"><a href="#callme-form" class="header__callme__btn js-callme">Обратный звонок</a>
             </div>
@@ -492,25 +494,6 @@
         <a href="http://tdomis.ru/" target="_blank" rel="nofollow">Наш салон-магазин</a>
     </div>
     <a href="#" id="scrollup" style="display: inline;"></a>
-    <section class="middle">
-        <table class="content_cont" width="100%" border="0" cellspacing="0" cellpadding="0">
-            <tr>
-                <td width="1%" valign="top">
-                    <aside class="sideLeft">
-                    </aside>
-
-                    <!-- .sideLeft --></td>
-                <td valign="top">
-                    <div class="container">
-                        <div class="content">
-                            <h1>«ООО «ДИРСИС» </h1>
-                        </div>
-                        <!-- .content-->
-                    </div>
-                    <!-- .container--></td>
-            </tr>
-        </table>
-    </section>
 </div>
 <footer>
     <div class="wrap">
