--- a/source/less/blocks/btn.less
+++ b/source/less/blocks/btn.less
@@ -15,4 +15,37 @@
   &:hover {
     background: #ffce58
   }
+
+  &--dark{
+    color: #fff;
+    background: #2c2c2c;
+    &:hover{
+      background: #2c2c2c;
+    }
+    &.btn--border{
+      color: #2c2c2c;
+      border: 2px solid #2c2c2c;
+      &:hover{
+        color: #fff;
+      }
+    }
+  }
+
+  &--border{
+    background: transparent;
+    border: 2px solid #ffc029;
+  }
+
+  &--min-width{
+    padding:0 15px;
+    display: inline-block;
+    width: auto;
+    box-sizing: border-box;
+  }
+
+  &--sm{
+    height: 38px;
+    line-height:34px;
+    font-weight:normal;
+  }
 }
