--- a/source/less/template_styles.less
+++ b/source/less/template_styles.less
@@ -1,6 +1,5 @@
 @import "global/reset.less";
 @import "global/omis-style.less";
-@import "global/variables.less";
 @import "global/fonts.less";
 @import "global/layout.less";
 
@@ -11,6 +10,8 @@
 @import "blocks/tabs.less";
 @import "blocks/middle.less";
 @import "blocks/header.less";
+@import "blocks/breadcrumbs.less";
+@import "blocks/tags.less";
 @import "blocks/social.less";
 @import "blocks/callme-form.less";
 @import "blocks/nav.less";
@@ -20,14 +21,5 @@
 @import "blocks/excursion.less";
 @import "blocks/gallery-slider.less";
 @import "blocks/discount-form.less";
-/*@import "blocks/main-img.less";
-@import "blocks/intro.less";
-@import "blocks/info.less";
-@import "blocks/info-item.less";
-@import "blocks/features.less";
-@import "blocks/feedback.less";
-@import "blocks/map.less";
-@import "blocks/footer.less";
-@import "blocks/photo.less";
-@import "blocks/video.less";*/
+@import "blocks/price.less";
 
