--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,8 @@
             </div>
             <div class="modal" id="thanks" style="display: none">
                 <div class="modal__title">Благодарим за заявку.</div>
-                <p> После обработки заказа, Вы получите от нас детальный сметный расчет, включающий:<br> стоимость работ, стоимость черновых материалов,  стоимость материалов для финишной отделки.</p>
+                <p> После обработки заказа, Вы получите от нас детальный сметный расчет, включающий:<br> стоимость
+                    работ, стоимость черновых материалов, стоимость материалов для финишной отделки.</p>
                 <p>Расчет предоставляется БЕСПЛАТНО</p>
             </div>
         </div>
