--- a/css/template_styles.css
+++ b/css/template_styles.css
@@ -679,6 +679,144 @@ footer .contacts .made .made_logo {
   border-radius: 30px;
   z-index: 999;
 }
+/*--gallery_page--*/
+.gallery_page .items {
+  display: block;
+  width: 100%;
+}
+.gallery_page .items .item {
+  display: block;
+  width: 100%;
+  height: 400px;
+  margin-bottom: 20px;
+}
+.gallery_page .items .item a {
+  color: #343434;
+}
+.gallery_page .items .item a .description {
+  margin-right: -4px;
+  display: inline-block;
+  vertical-align: top;
+  width: 400px;
+  height: 400px;
+  background-color: #ffc029;
+  background-image: url(../images/print.png);
+  background-repeat: no-repeat;
+  background-position: -10px 260px;
+  color: #343434;
+  letter-spacing: normal;
+}
+.gallery_page .items .item a .description:nth-child(2n-1) {
+  background-position: 90px 260px;
+}
+.gallery_page .items .item a .description h2 {
+  margin-top: 0;
+  letter-spacing: normal;
+  line-height: 1.0;
+  color: #343434;
+  font-weight: 700;
+  font-size: 29px;
+  padding: 30px 30px 20px 20px;
+}
+.gallery_page .items .item a .description p {
+  letter-spacing: normal;
+  color: #343434;
+  font-weight: 400;
+  font-size: 15px;
+  padding: 0 30px 0 20px;
+}
+.gallery_page .items .item a .description strong {
+  font-weight: 700;
+}
+.gallery_page .items .item a .description ul {
+  display: block;
+  letter-spacing: normal;
+  color: #343434;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 17px;
+  list-style: circle outside;
+  margin: 10px 0 10px 40px;
+}
+.gallery_page .items .item a .description ul li {
+  margin: 0;
+  letter-spacing: normal;
+}
+.gallery_page .items .item a .description ul li:before {
+  display: none;
+}
+.gallery_page .items .item a .img {
+  margin-right: -4px;
+  display: inline-block;
+  vertical-align: top;
+  width: 600px;
+  height: 400px;
+}
+.gallery_page .items .item a .img img {
+  width: 600px;
+  height: 400px;
+}
+.gallery_page .more {
+  display: block;
+  position: absolute;
+  letter-spacing: normal;
+  text-decoration: none;
+  margin: -60px 0 0 840px;
+  border: 2px solid #ffffff;
+  font-weight: 900;
+  padding: 10px 25px 10px 25px;
+  z-index: 9999;
+  color: #ffffff;
+  border-radius: 25px;
+}
+/*--wp-pagenavi--*/
+.wp-pagenavi {
+  letter-spacing: normal;
+  clear: both;
+}
+.wp-pagenavi a,
+.wp-pagenavi span {
+  text-decoration: none;
+  border: 1px solid #BFBFBF;
+  padding: 3px 5px;
+  margin: 2px;
+}
+.wp-pagenavi span {
+  border: 0 solid #838587;
+  background: #e6e3e6;
+  background: -o-linear-gradient(top, #f2f2f2, #e6e3e6);
+  background-image: -ms-linear-gradient(top, #f2f2f2 0%, #e6e3e6 100%);
+  padding: 9.5px 12px;
+  border-radius: 6px;
+  box-shadow: rgba(255, 255, 255, 0.4) 0 0 0, inset rgba(255, 255, 255, 0.4) 0 1px 0;
+  text-shadow: #fff 0 1px 0;
+  color: #343434;
+  font-size: 15px;
+  text-decoration: none;
+  vertical-align: middle;
+}
+.wp-pagenavi a {
+  border: 0 solid #838587;
+  background: #e6e3e6;
+  background: -o-linear-gradient(top, #f2f2f2, #e6e3e6);
+  background-image: -ms-linear-gradient(top, #f2f2f2 0%, #e6e3e6 100%);
+  padding: 9.5px 12px;
+  border-radius: 6px;
+  box-shadow: rgba(255, 255, 255, 0.4) 0 0 0, inset rgba(255, 255, 255, 0.4) 0 1px 0;
+  text-shadow: #fff 0 1px 0;
+  color: #343434;
+  font-size: 15px;
+  font-family: "Open Sans";
+  text-decoration: none;
+  vertical-align: middle;
+}
+.wp-pagenavi a:hover,
+.wp-pagenavi span.current {
+  border-color: #000;
+}
+.wp-pagenavi span.current {
+  font-weight: bold;
+}
 @font-face {
   font-family: 'Open Sans';
   src: local("Open Sans"), url('../fonts/open-sans-webfont.woff2') format('woff2'), url('../fonts/open-sans-webfont.woff') format('woff');
@@ -688,7 +826,7 @@ footer .contacts .made .made_logo {
 @font-face {
   font-family: 'Open Sans';
   src: local("Open Sans"), url('../fonts/open-sans-light-webfont.woff2') format('woff2'), url('../fonts/open-sans-light-webfont.woff') format('woff');
-  font-weight: 300;
+  font-weight: 700;
   font-style: normal;
 }
 @font-face {
@@ -838,149 +976,6 @@ p {
 }
 .form__line .form__field {
   width: 100%;
-}
-.form__textarea {
-  padding: 20px;
-  width: 100%;
-  height: 160px;
-  box-sizing: border-box;
-  line-height: 26px;
-  font-size: 18px;
-  font-family: "PT Sans", "Arial", sans-serif;
-  font-weight: bold;
-  color: #000000;
-  background: #f2f2f2;
-  border: none;
-}
-.form__textarea::-webkit-input-placeholder {
-  color: #000;
-}
-.form__textarea:-moz-placeholder {
-  color: #000;
-}
-.form__textarea::-moz-placeholder {
-  color: #000;
-}
-.form__textarea:-ms-input-placeholder {
-  color: #000;
-}
-.form__textarea:hover {
-  background: #e5e5e5;
-}
-.form__textarea:focus {
-  padding: 16px;
-  background: #ffffff;
-  border: 4px solid #e5e5e5;
-}
-.form__radio {
-  padding: 16px 0;
-  min-height: 56px;
-  box-sizing: border-box;
-  display: block;
-}
-@media (min-width: 768px) {
-  .form__radio {
-    padding: 18px 0;
-  }
-}
-.form__radio input {
-  display: none;
-}
-.form__radio input:checked + .form__radio-label:after {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: 17px;
-  transform: translateY(-50%);
-  width: 21px;
-  height: 21px;
-  background: #333333;
-  border-radius: 50%;
-}
-.form__radio-label {
-  padding: 0 0 0 77px;
-  position: relative;
-  display: block;
-  font-size: 18px;
-  font-weight: bold;
-  color: #000000;
-}
-.form__radio-label:before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  width: 56px;
-  height: 56px;
-  background: #f2f2f2;
-  border-radius: 50%;
-}
-.form__radio-label:hover:before {
-  background: #e5e5e5;
-}
-.form__radio-label:active:before {
-  background: #d5d5d5;
-}
-.form__radio-label:active:after {
-  opacity: 0.3;
-}
-.form__checkbox {
-  padding: 16px 0;
-  min-height: 56px;
-  box-sizing: border-box;
-  display: block;
-}
-.form__checkbox input {
-  display: none;
-}
-.form__checkbox input:checked + .form__checkbox-label:after {
-  content: '';
-  margin-top: -2px;
-  position: absolute;
-  top: 50%;
-  left: 17px;
-  transform: translateY(-50%) rotate(-45deg);
-  transform-origin: 50% 50%;
-  width: 21px;
-  height: 13px;
-  box-sizing: border-box;
-  border-left: 3px solid #000;
-  border-bottom: 3px solid #000;
-}
-.form__checkbox-label {
-  padding: 0 0 0 77px;
-  position: relative;
-  display: block;
-  font-size: 18px;
-  font-weight: bold;
-  color: #000000;
-}
-.form__checkbox-label:before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  width: 56px;
-  height: 56px;
-  background: #f2f2f2;
-  border-radius: 4px;
-}
-.form__checkbox-label:hover:before {
-  background: #e5e5e5;
-}
-.form__checkbox-label:active:before {
-  background: #d5d5d5;
-}
-.form__checkbox-label:active:after {
-  opacity: 0.3;
-}
-.form__note {
-  text-transform: uppercase;
-  line-height: normal;
-  font-size: 14px;
-  color: #333333;
 }
 .form__select {
   padding: 0;
@@ -1231,6 +1226,9 @@ p {
   font-size: 16px;
   line-height: 1.5;
 }
+.middle .wrap {
+  width: 1000px;
+}
 .middle h1 {
   margin-top: 22px;
   margin-bottom: 22px;
@@ -1453,6 +1451,62 @@ p {
 }
 .header--fixed .header__phones .header__phones-item:last-child:after {
   display: none;
+}
+.breadcrumbs {
+  padding: 15px 20px;
+  background: #f9f9f9;
+}
+.breadcrumbs__list {
+  list-style: none;
+}
+.breadcrumbs__item {
+  display: inline-block;
+  vertical-align: top;
+  color: #343434;
+}
+.breadcrumbs__item:after {
+  content: '>';
+  margin: 0 3px 0 6px;
+}
+.breadcrumbs__item:last-child:after {
+  display: none;
+}
+.breadcrumbs__item a {
+  text-decoration: underline;
+  color: #343434;
+}
+.breadcrumbs__item a:hover {
+  opacity: .7;
+}
+.tags {
+  margin-bottom: 15px;
+  margin-left: -13px;
+  list-style: none;
+}
+.tags__item {
+  margin-left: 13px;
+  margin-bottom: 15px;
+  display: inline-block;
+  vertical-align: top;
+}
+.tags__item--active a {
+  background: #ffc029;
+}
+.tags__item a {
+  padding: 0 15px;
+  display: block;
+  height: 31px;
+  box-sizing: border-box;
+  line-height: 27px;
+  text-decoration: none;
+  font-size: 15px;
+  font-weight: 700;
+  color: #333333;
+  border: 2px solid #ffb400;
+  border-radius: 31px;
+}
+.tags__item a:hover {
+  background: #ffc029;
 }
 .social {
   padding: 0;
@@ -1857,13 +1911,79 @@ p {
   font-size: 20px;
   color: #333333;
 }
-/*@import "blocks/main-img.less";
-@import "blocks/intro.less";
-@import "blocks/info.less";
-@import "blocks/info-item.less";
-@import "blocks/features.less";
-@import "blocks/feedback.less";
-@import "blocks/map.less";
-@import "blocks/footer.less";
-@import "blocks/photo.less";
-@import "blocks/video.less";*/
+.price {
+  margin-top: 25px;
+  display: -ms-flexbox;
+  display: flex;
+}
+.price__left-sidebar {
+  margin-right: 41px;
+  width: 297px;
+}
+.price__nav {
+  margin-bottom: 40px;
+  list-style: none;
+}
+.price__nav-item {
+  margin-bottom: 6px;
+}
+.price__nav-item a {
+  display: inline-block;
+  line-height: 1.1;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 700;
+  color: #343434;
+  border-bottom: 1px dotted #343434;
+}
+.price__nav-item a:hover {
+  color: #ff9900;
+  border-bottom: 1px dotted #ff9900;
+}
+.price__nav-item--active a {
+  color: #ff9900;
+  border-bottom: 1px dotted #ff9900;
+}
+.price__body {
+  -ms-flex-positive: 1;
+      flex-grow: 1;
+}
+.price__table tr:first-child td {
+  border-top: 1px solid #e1e1e1;
+}
+.price__table tr:hover td {
+  background-color: #e1e1e1;
+  cursor: pointer;
+}
+.price__table td {
+  padding: 10px 20px;
+  color: #343434;
+  border-left: 1px solid #e1e1e1;
+  border-bottom: 1px solid #e1e1e1;
+  text-align: center;
+}
+.price__table td:first-child {
+  text-align: left;
+}
+.price__table td:last-child {
+  text-align: right;
+  border-right: 1px solid #e1e1e1;
+}
+.price__table th {
+  padding: 10px 20px;
+  text-align: center;
+  font-weight: 700;
+  color: #343434;
+  border-left: 1px solid #e1e1e1;
+  border-bottom: 1px solid #e1e1e1;
+  white-space: nowrap;
+}
+.price__table th:last-child {
+  border-right: 1px solid #e1e1e1;
+}
+.price__title {
+  text-align: center;
+  font-size: 24px;
+  font-weight: bold;
+  color: #ff9900;
+}
