--- a/source/less/blocks/fancybox.less
+++ b/source/less/blocks/fancybox.less
@@ -3,10 +3,10 @@
   opacity: 0.5 !important;
 }
 
-.fancybox-slide>*{
+.fancybox-slide > * {
   background: #e1e1e1;
   border-radius: 5px;
-  box-shadow: 0 1px 15px 0 rgba(51,51,51,0.5);
+  box-shadow: 0 1px 15px 0 rgba(51, 51, 51, 0.5);
 }
 
 .fancybox-close-small {
@@ -16,9 +16,11 @@
   height: 16px;
   background: url("../images/ico-close.png") no-repeat center;
   background-size: 100%;
+
   &:after {
     display: none;
   }
+
   &:hover {
     opacity: 0.7;
   }
