--- a/source/less/global/omis-style.less
+++ b/source/less/global/omis-style.less
@@ -661,3 +661,174 @@ footer {
   border-radius: 30px;
   z-index: 999;
 }
+
+/*--gallery_page--*/
+.gallery_page .items {
+  display: block;
+  width: 100%;
+}
+
+.gallery_page .items .item {
+  display: block;
+  width: 100%;
+  height: 400px;
+  margin-bottom: 20px;
+}
+
+.gallery_page .items .item a {
+  color: #343434;
+}
+
+.gallery_page .items .item a .description {
+  margin-right: -4px;
+  display: inline-block;
+  vertical-align: top;
+  width: 400px;
+  height: 400px;
+  background-color: #ffc029;
+  background-image: url(../images/print.png);
+  background-repeat: no-repeat;
+  background-position: -10px 260px;
+  color: #343434;
+  letter-spacing: normal;
+}
+
+.gallery_page .items .item a .description:nth-child(2n-1) {
+  background-position: 90px 260px;
+}
+
+.gallery_page .items .item a .description h2 {
+  margin-top: 0;
+  letter-spacing: normal;
+  line-height: 1.0;
+  color: #343434;
+  font-weight: 700;
+  font-size: 29px;
+  padding: 30px 30px 20px 20px;
+}
+
+.gallery_page .items .item a .description p {
+  letter-spacing: normal;
+  color: #343434;
+  font-weight: 400;
+  font-size: 15px;
+  padding: 0 30px 0 20px;
+}
+
+.gallery_page .items .item a .description strong {
+  font-weight: 700;
+}
+
+.gallery_page .items .item a .description ul {
+  display: block;
+  letter-spacing: normal;
+  color: #343434;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 17px;
+  list-style: circle outside;
+  margin: 10px 0 10px 40px;
+}
+
+.gallery_page .items .item a .description ul li {
+  margin: 0;
+  letter-spacing: normal;
+  &:before {
+    display: none;
+  }
+}
+
+.gallery_page .items .item a .img {
+  margin-right: -4px;
+  display: inline-block;
+  vertical-align: top;
+  width: 600px;
+  height: 400px;
+}
+
+.gallery_page .items .item a .img img {
+  width: 600px;
+  height: 400px;
+}
+
+.gallery_page .more {
+  display: block;
+  position: absolute;
+  letter-spacing: normal;
+  text-decoration: none;
+  margin: -60px 0 0 840px;
+  border: 2px solid #ffffff;
+  font-weight: 900;
+  padding: 10px 25px 10px 25px;
+  z-index: 9999;
+  color: #ffffff;
+  border-radius: 25px;
+}
+
+/*--wp-pagenavi--*/
+.wp-pagenavi {
+  letter-spacing: normal;
+  clear: both;
+}
+
+.wp-pagenavi a, .wp-pagenavi span {
+  text-decoration: none;
+  border: 1px solid #BFBFBF;
+  padding: 3px 5px;
+  margin: 2px;
+}
+
+.wp-pagenavi span {
+  border: 0 solid #838587;
+  background: #e6e3e6;
+  background: -webkit-gradient(linear, left top, left bottom, from(#f2f2f2), to(#e6e3e6));
+  background: -webkit-linear-gradient(top, #f2f2f2, #e6e3e6);
+  background: -moz-linear-gradient(top, #f2f2f2, #e6e3e6);
+  background: -ms-linear-gradient(top, #f2f2f2, #e6e3e6);
+  background: -o-linear-gradient(top, #f2f2f2, #e6e3e6);
+  background-image: -ms-linear-gradient(top, #f2f2f2 0%, #e6e3e6 100%);
+  padding: 9.5px 12px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+  -webkit-box-shadow: rgba(255, 255, 255, 0.4) 0 0 0, inset rgba(255, 255, 255, 0.4) 0 1px 0;
+  -moz-box-shadow: rgba(255, 255, 255, 0.4) 0 0 0, inset rgba(255, 255, 255, 0.4) 0 1px 0;
+  box-shadow: rgba(255, 255, 255, 0.4) 0 0 0, inset rgba(255, 255, 255, 0.4) 0 1px 0;
+  text-shadow: #fff 0 1px 0;
+  color: #343434;
+  font-size: 15px;
+  text-decoration: none;
+  vertical-align: middle;
+}
+
+.wp-pagenavi a {
+  border: 0 solid #838587;
+  background: #e6e3e6;
+  background: -webkit-gradient(linear, left top, left bottom, from(#f2f2f2), to(#e6e3e6));
+  background: -webkit-linear-gradient(top, #f2f2f2, #e6e3e6);
+  background: -moz-linear-gradient(top, #f2f2f2, #e6e3e6);
+  background: -ms-linear-gradient(top, #f2f2f2, #e6e3e6);
+  background: -o-linear-gradient(top, #f2f2f2, #e6e3e6);
+  background-image: -ms-linear-gradient(top, #f2f2f2 0%, #e6e3e6 100%);
+  padding: 9.5px 12px;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+  -webkit-box-shadow: rgba(255, 255, 255, 0.4) 0 0 0, inset rgba(255, 255, 255, 0.4) 0 1px 0;
+  -moz-box-shadow: rgba(255, 255, 255, 0.4) 0 0 0, inset rgba(255, 255, 255, 0.4) 0 1px 0;
+  box-shadow: rgba(255, 255, 255, 0.4) 0 0 0, inset rgba(255, 255, 255, 0.4) 0 1px 0;
+  text-shadow: #fff 0 1px 0;
+  color: #343434;
+  font-size: 15px;
+  font-family: "Open Sans";
+  text-decoration: none;
+  vertical-align: middle;
+}
+
+.wp-pagenavi a:hover, .wp-pagenavi span.current {
+  border-color: #000;
+}
+
+.wp-pagenavi span.current {
+  font-weight: bold;
+}
