--- a/source/less/blocks/calculator.less
+++ b/source/less/blocks/calculator.less
@@ -1,5 +1,5 @@
 .calculator {
-  padding: 66px 20px 53px;
+  padding: 66px 20px 68px;
   background: #343434;
   color: #ffffff;
 
@@ -21,16 +21,18 @@
 }
 
 .calculator__separator {
-  margin: 0 -42px 30px;
+  margin: 5px -42px 35px;
   border-bottom: 1px solid #5d5d5d;
 }
 
 .calculator__note {
+  margin-top: 5px;
   text-align: center;
   line-height: 1.9;
   font-size: 16px;
 }
 
 .calculator__note-f24 {
+  margin-top: 6px;
   font-size: 24px;
 }
