--- a/source/less/blocks/gallery-slider.less
+++ b/source/less/blocks/gallery-slider.less
@@ -42,14 +42,18 @@
   li {
     float: left;
 
-    img {
+    a{
       margin-bottom: 20px;
       display: block;
-      border: 2px solid #cfcfcf;
 
       &:last-child {
         margin-bottom: 0;
       }
+    }
+
+    img {
+      display: block;
+      border: 2px solid #cfcfcf;
     }
   }
 }
