--- a/source/less/global/omis-style.less
+++ b/source/less/global/omis-style.less
@@ -137,8 +137,9 @@
   }
 
   .home_slider__form {
-    margin: 0 auto;
+    margin-right:122px;
     width: 250px;
+    display: inline-block;
     .button {
       margin: 26px auto 0;
       width: 100%;
@@ -447,7 +448,7 @@ footer {
           font-weight: 700;
           text-transform: uppercase;
           color: #fff;
-          padding-bottom: 20px;
+          padding-bottom: 13px;
         }
 
         ul {
@@ -455,7 +456,7 @@ footer {
           padding: 0;
           margin: 0;
           li {
-            margin-bottom: 10px;
+            margin-bottom: 4px;
             a {
               text-decoration: none;
               font-size: 13px;
@@ -501,6 +502,10 @@ footer {
       line-height: 35px;
       font-weight: 700;
       color: #343434;
+
+      > span{
+        white-space: nowrap;
+      }
 
       .vk {
         display: inline-block;
@@ -760,7 +765,6 @@ footer {
   border: 2px solid #ffffff;
   font-weight: 900;
   padding: 10px 25px 10px 25px;
-  z-index: 9999;
   color: #ffffff;
   border-radius: 25px;
 }
