--- a/templates/article.html
+++ b/templates/article.html
@@ -219,32 +219,32 @@
                 <div class="gallery-slider__wrap">
                     <ul class="gallery-slider">
                         <li>
-                            <img src="../images/img1.jpg" alt="">
-                            <img src="../images/img5.jpg" alt="">
+                            <a href="../images/img1.jpg" class="fancybox" data-fancybox="group"><img src="../images/img1.jpg" alt=""></a>
+                            <a href="../images/img5.jpg" class="fancybox" data-fancybox="group"><img src="../images/img5.jpg" alt=""></a>
                         </li>
                         <li>
-                            <img src="../images/img2.jpg" alt="">
-                            <img src="../images/img4.jpg" alt="">
+                            <a href="../images/img2.jpg" class="fancybox" data-fancybox="group"><img src="../images/img2.jpg" alt=""></a>
+                            <a href="../images/img4.jpg" class="fancybox" data-fancybox="group"><img src="../images/img4.jpg" alt=""></a>
                         </li>
                         <li>
-                            <img src="../images/img3.jpg" alt="">
-                            <img src="../images/img7.jpg" alt="">
+                            <a href="../images/img3.jpg" class="fancybox" data-fancybox="group"><img src="../images/img3.jpg" alt=""></a>
+                            <a href="../images/img7.jpg" class="fancybox" data-fancybox="group"><img src="../images/img7.jpg" alt=""></a>
+                        </li></a>
+                        <li>
+                            <a href="../images/img4.jpg" class="fancybox" data-fancybox="group"><img src="../images/img4.jpg" alt=""></a>
+                            <a href="../images/img2.jpg" class="fancybox" data-fancybox="group"><img src="../images/img2.jpg" alt=""></a>
                         </li>
                         <li>
-                            <img src="../images/img4.jpg" alt="">
-                            <img src="../images/img2.jpg" alt="">
+                            <a href="../images/img2.jpg" class="fancybox" data-fancybox="group"><img src="../images/img2.jpg" alt=""></a>
+                            <a href="../images/img4.jpg" class="fancybox" data-fancybox="group"><img src="../images/img4.jpg" alt=""></a>
                         </li>
                         <li>
-                            <img src="../images/img2.jpg" alt="">
-                            <img src="../images/img4.jpg" alt="">
+                            <a href="../images/img3.jpg" class="fancybox" data-fancybox="group"><img src="../images/img3.jpg" alt=""></a>
+                            <a href="../images/img7.jpg" class="fancybox" data-fancybox="group"><img src="../images/img7.jpg" alt=""></a>
                         </li>
                         <li>
-                            <img src="../images/img3.jpg" alt="">
-                            <img src="../images/img7.jpg" alt="">
-                        </li>
-                        <li>
-                            <img src="../images/img4.jpg" alt="">
-                            <img src="../images/img2.jpg" alt="">
+                            <a href="../images/img4.jpg" class="fancybox" data-fancybox="group"><img src="../images/img4.jpg" alt=""></a>
+                            <a href="../images/img2.jpg" class="fancybox" data-fancybox="group"><img src="../images/img2.jpg" alt=""></a>
                         </li>
                     </ul>
                 </div>
