--- a/source/less/blocks/service-premium.less
+++ b/source/less/blocks/service-premium.less
@@ -7,7 +7,7 @@
 }
 
 .service-premium__title {
-  margin-bottom: 24px;
+  margin-bottom: 29px;
   line-height: normal;
   font-size: 30px;
   font-weight: bold;
@@ -20,6 +20,7 @@
 }
 
 .service-premium__list {
+  margin-top: 9px;
   margin-left: 60px;
   width: 388px;
 }
