--- a/source/less/blocks/tabs.less
+++ b/source/less/blocks/tabs.less
@@ -24,12 +24,12 @@
   }
 
   &:first-child {
-    width: 200px;
+    min-width: 200px;
     border-radius: 75px 0 0 75px;
   }
 
   &:last-child {
-    width: 200px;
+    width: 203px;
     border-radius: 0 75px 75px 0;
   }
 
@@ -56,8 +56,9 @@
 }
 
 .tabs__content {
-  padding: 32px 30px;
+  padding: 33px 30px 39px;
   display: none;
+  line-height:1.8;
 }
 
 .tabs__content--active {
