--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
                         <div class="form__field"><input type="text" value="misterx@list.ru"></div>
                     </div>
                     <div class="form__line">
-                        <input class="btn js-thanks" type="submit" value="Узнать стоимость">
+                        <input class="btn js-thanks" type="button" value="Узнать стоимость">
                     </div>
                 </form>
             </div>
